# spatial-inference

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: README_results_tables.md  cosas.md  experiment_results.md  experiment_sets.md  experiments.md  index.md  queries.sql
docs/basic/: index.md  summary_compact_comparison.md  summary_dip_vs_krg.md  summary_metrics.md  summary_paper_performance.md  summary_paper_performance_data.csv  supervision_window_pairwise.csv
docs/basic/window_diagnostics/: exemplary_windows.csv  row_level_metrics.csv  summary.md
docs/cross_dataset_no2_nox_autoencoder/: index.md  summary_paper_performance.md
docs/cross_dataset_no2_nox_unet/: index.md  summary_paper_performance.md
docs/experiments_NO/: index.md
docs/stylesheets/: extra.css
docs/surface_selection_2023/: index.md  interim_summary.md  summary_paper_performance.md
src/metraq_dip/: experiment_old.py  experiments.py  experiments_parallel.py  main.py  plot.py
tests/: test_airparif_catalog.py  test_airparif_files.py  test_airparif_transform.py  test_barcelona_catalog.py  test_barcelona_files.py  test_barcelona_transform.py  test_config_tools.py  test_cross_dataset_no2_nox_summary.py  test_data_collection.py  test_dip_ensemble_optimizer.py  test_dip_optimizer.py  test_experiment_artifacts.py  test_experiment_summary_tables.py  test_experiments.py  test_fix_experiment_norm_stats.py  test_grid.py  test_main.py  test_metraq_db.py  test_plot.py  test_plot_surface_video.py  test_random_tools.py  test_render_results_plots.py  test_tools.py  test_trainer_dip.py
(+57 files in other folders)
